<resources>

    <string name="app_name">微课堂</string>
    <string name="app_version">v1.0</string>
    <string name="app_author">中心小学课题组</string>
    <string name="app_run">立即体验</string>
    <string name="app_about">关于微课堂</string>
    <string name="app_go"> > </string>
    <string name="app_exit">退出</string>
    <string name="app_settings">设置</string>
    <string name="app_img_alt">这是一张图片</string>
    <string name="app_info">功能介绍</string>
    <string name="app_notice">系统通知</string>
    <string name="app_idea">意见建议</string>
    <string name="app_update">检查新版本</string>

    <!--添加奖品界面字符串-->
    <string name="shop_name">奖品名称</string>
    <string name="shop_score">奖品售价（1元 = 100分）</string>
    <string name="shop_num">奖品库存（0 – 999）</string>
    <string name="shop_pic">奖品图片</string>

    <string name="scan_tips">将二维码图片对准扫描框即可自动扫描</string>
    <string name="qr_checkbox_text">开启连续扫描</string>

    <string name="back">返回</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="finish">完成</string>

    <!--登录界面字符串-->
    <string name="checked_pwd">记住密码</string>
    <string name="checked_autologin">自动登录</string>
    <string name="login_tips">教师登录后才能进行相关操作！</string>
    <string name="login_title">用户登录</string>
    <string name="login_btn_text">立即登录</string>
    <string name="userreg">注册用户</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="username_pic">用户名图片</string>
    <string name="userface_pic">用户头像</string>
    <string name="username_tips">请输入手机号码…</string>
    <string name="userpwd_tips">请输入登录密码…</string>
    <string name="userpwd_pic">密码图片</string>

    <!--UserCenter界面字符串-->
    <string name="teacher_name">姓名</string>
    <string name="teacher_sex">性别</string>
    <string name="teacher_xueli">学历</string>
    <string name="teacher_zhicheng">职称</string>
    <string name="teacher_tel">手机号码</string>
    <string name="teacher_mood">个性签名</string>

    <string name="uc_title">教师工作台</string>
    <string name="uc_tools_title">常用工具</string>
    <string name="uc_new_face_title">更换头像</string>
    <string name="uc_new_face_tips">请点击上面的头像</string>

    <!--PicturePopupWindow界面字符串-->
    <string name="up_pic_new_photo">拍照</string>
    <string name="up_pic_choose_photo">从手机相册选择</string>
    <string name="up_pic_cancel">取消</string>

    <!--图片上传界面字符串-->
    <string name="up_pic_please_choose_one">选择上传的图片</string>
    <string name="up_pic_btn_title">上传图片</string>

    <!--学生课堂学习图片 上传界面字符串-->
    <string name="up_pic_student_class_work_title">学生课堂学习图片</string>
    <string name="up_pic_student_class_work_pic_tips">点击图片即可打开摄像头</string>
    <string name="graffiti_redo">恢复一笔</string>
    <string name="graffiti_open">打开</string>
    <string name="graffiti_undo">撤销一笔</string>
    <string name="graffiti_eraser">橡皮</string>
    <string name="graffiti_draw">涂鸦</string>
    <string name="graffiti_pen_width">画笔宽度</string>
    <string name="graffiti_preview">预览</string>
    <string name="graffiti_clear_all">清屏</string>
    <string name="graffiti_finish">涂鸦结束，上传投影</string>
    <!-- 仿微信 底部菜单栏 -->
    <string name="btn1_text">课堂管理</string>
    <string name="btn2_text">作业管理</string>
    <string name="btn3_text">数据管理</string>
    <string name="btn4_text">我</string>
    <!-- 仿微信 顶部菜单栏 -->
    <string name="pop1_text">联系家长</string>
    <string name="pop2_text">添加学生</string>
    <string name="pop3_text">扫一扫</string>
    <string name="pop4_text">群发短信</string>
    <string name="pop5_text">其他功能</string>
    <!-- 摇一摇结果  -->
    <string name="shake_user_name">姓名</string>
    <string name="shake_user_info">其他一些信息</string>
    <!-- 评语列表 -->
    <string name="com_score">+100</string>
    <string name="com_remark">课堂表现良好！</string>
    <!-- 添加评语 -->
    <string name="com_top_bar_title">添加评语</string>
    <string name="com_msg_tips">请输入评语</string>
    <string name="com_msg_char_len_tips_text">你已经输入了0个字符，还能输入15个字符。</string>
    <string name="com_btn_submit_text">保存</string>

    <!--123-->
    <string name="pickerview_cancel">取消</string>
    <string name="pickerview_date_title">日期选择</string>
    <string name="pickerview_submit">确定</string>
    <string name="pickerview_year">年</string>
    <string name="pickerview_month">月</string>
    <string name="pickerview_day">日</string>
    <string name="pickerview_hours">时</string>
    <string name="pickerview_minutes">分</string>
    <string name="pickerview_seconds">秒</string>

    <string name="picker_time">时间选择器</string>
    <string name="picker_province">条件选择器</string>

    <string name="picker_custom_time">时间选择器自定义布局</string>
    <string name="picker_custom_province">条件选择器自定义布局</string>
    <string name="choose_date_title">请选择检查作业的日期</string>
</resources>
