<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg"
    android:orientation="vertical"
    android:baselineAligned="false">

    <TextView
        android:id="@+id/tv_top_bar_title"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/app_top_bar_bg"
        android:gravity="center"
        android:text="@string/login_title"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:id="@+id/userface"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/userface_pic"
            android:src="@drawable/default_userhead"
            android:layout_marginBottom="10dp"/>
    </LinearLayout>

    <FrameLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/username"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/default_edittext_height"
            android:layout_marginTop="5dp"
            android:hint="@string/username_tips"
            android:text="13919167483"
            android:inputType="number|phone"
            android:maxLength="20"
            android:paddingLeft="50dp"
            android:paddingRight="60dp"
            tools:ignore="Autofill,RtlHardcoded"/>

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="left|center_vertical"
            android:background="@drawable/login_usr_in_img"
            android:visibility="visible"
            tools:ignore="RtlCompat,RtlHardcoded"
            android:contentDescription="@string/username_pic"
            android:layout_marginLeft="5dp" />

        <Button
            android:id="@+id/bt_username_clear"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/button_clear"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="10dp"
            android:visibility="invisible"
            tools:ignore="RtlHardcoded" />

    </FrameLayout>

    <FrameLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/default_edittext_height"
            android:inputType="textPassword"
            android:paddingRight="60dp"
            android:maxLength="20"
            android:paddingLeft="50dp"
            android:hint="@string/userpwd_tips"
            android:text="123456"
            tools:ignore="Autofill,RtlHardcoded" />

        <Button
            android:id="@+id/bt_pwd_eye"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/button_eye_n"
            android:layout_gravity="right|center"
            android:layout_marginRight="10dp"
            tools:ignore="RtlHardcoded" />
        <Button
            android:id="@+id/bt_pwd_clear"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/button_clear"
            android:visibility="invisible"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="33dp"
            tools:ignore="RtlHardcoded" />

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="left|center"
            android:background="@drawable/login_code_in_img"
            tools:ignore="RtlCompat,RtlHardcoded"
            android:contentDescription="@string/userpwd_pic"
            android:layout_marginLeft="5dp" />

    </FrameLayout>

    <LinearLayout
        android:id="@+id/userchecked_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:gravity="center">

        <CheckBox
            android:id="@+id/cb_mima"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|left"
            android:layout_marginLeft="12dp"
            android:layout_weight="1"
            android:text="@string/checked_pwd"
            tools:ignore="RtlHardcoded" />

        <CheckBox
            android:id="@+id/cb_auto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|right"
            android:layout_marginLeft="12dp"
            android:layout_weight="1"
            android:checked="false"
            android:text="@string/checked_autologin"
            tools:ignore="RtlHardcoded" />
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <Button android:id="@+id/login"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:background="@drawable/corners_red_bg"
            android:text="@string/login_btn_text"
            android:typeface="sans"
            android:textSize="16sp"
            android:textStyle="normal|bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/userreg_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|left"
            android:layout_weight="1"
            android:background="#00000000"
            android:text="@string/userreg"
            android:textSize="16sp"
            tools:ignore="ButtonStyle,RtlHardcoded" />

        <Button
            android:id="@+id/login_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|right"
            android:layout_weight="1"
            android:background="#00000000"
            android:text="@string/forget_pwd"
            android:textSize="16sp"
            tools:ignore="ButtonStyle,RtlHardcoded" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/registfer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#00000000"
            android:gravity="center"
            android:text="@string/login_tips"
            android:textSize="16sp"
            android:typeface="sans"
            android:textColor="#FFFF0000" />

    </LinearLayout>
</LinearLayout>
