<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/sa_top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <include layout="@layout/layout_activity_sa_top_bar_wx_title_search_plus" />

    </LinearLayout>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:orientation="horizontal"
        android:layout_height="55dp">

        <RadioButton
            android:id="@+id/sa_chat"
            android:checked="true"
            android:text="@string/btn1_text"
            android:drawableTop="@drawable/nav_btn1_img_selector"
            style="@style/style_RadioButton"/>

        <RadioButton
            android:id="@+id/sa_contacts"
            android:text="@string/btn2_text"
            android:drawableTop="@drawable/nav_btn2_img_selector"
            style="@style/style_RadioButton"/>

        <RadioButton
            android:id="@+id/sa_discovery"
            android:text="@string/btn3_text"
            android:drawableTop="@drawable/nav_btn3_img_selector"
            style="@style/style_RadioButton"/>

        <RadioButton
            android:id="@+id/sa_me"
            android:text="@string/btn4_text"
            android:drawableTop="@drawable/nav_btn4_img_selector"
            style="@style/style_RadioButton"/>
    </RadioGroup>

    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/radioGroup"
        android:layout_below="@+id/sa_top_bar"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/app_foot_bar_bg"
        android:layout_below="@+id/viewPager"/>

</RelativeLayout>