<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_student_class_work"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:ignore="UseCompoundDrawables">

    <TextView
        android:id="@+id/tv_uc_new_face"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#0078F0"
        android:gravity="center"
        android:text="@string/uc_new_face_title"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <com.zbar.lib.custom_views.imgview.UserFaceImageView
            android:id="@+id/tc_img"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:gravity="center"
            android:padding="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/up_pic_student_class_work_pic_tips"
            android:src="@drawable/default_userhead"
            app:border_width="5dp"
            app:border_color="@color/white"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessLeaf"
        android:gravity="center_horizontal"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/tc_name"
            android:text="@string/uc_new_face_tips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:background="@drawable/corners_white_bg"
            android:textSize="16sp"
            android:typeface="sans"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:textColor="#FFFF0000" />
    </LinearLayout>

</LinearLayout>
